src/test/deca/context/invalid/object/fieldBadDEclaration.deca
class A
{
  String a;
  float b;
}
